Struttura base- debug

--- a/index.html
+++ b/index.html
@@ -21,27 +21,107 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body class="debug">
 
-    <!-- header -->
-    <header>
-        <div class="container">
-            HEADER
-        </div>
-    </header>
-    <!-- /header -->
+
 
     <!-- main -->
     <main>
-        <div class="container">
-            MAIN
+        <div class="row aside">
+
+            <nav class="side-nav">
+                <div class="main-logo">
+                    <a href="#">Spotify Logo</a>
+                </div>
+                <ul>
+                    <li>
+                        <a href="#">Home</a>
+                    </li>
+                    <li>
+                        <a href="#">Cerca</a>
+                    </li>
+                    <li>
+                        <a href="#">La tua libreria</a>
+                    </li>
+
+                </ul>
+            </nav>
+
+            <div id="main-container">
+                <!-- header -->
+                <header>
+                    <div class="top-banner">
+                        HEADER
+                    </div>
+                </header>
+                <!-- /header -->
+
+                <div class="main-section">
+
+                    <div class="row">
+                        <!-- <div class="col-1-6"></div>
+                        <div class="col-1-6"></div>
+                        <div class="col-1-6"></div>
+                        <div class="col-1-6"></div>
+                        <div class="col-1-6"></div>
+                        <div class="col-1-6"></div>
+                        <div class="col-1-6"></div>
+                        <div class="col-1-6"></div>
+                        <div class="col-1-6"></div>
+                        <div class="col-1-6"></div>
+                        <div class="col-1-6"></div>
+                        <div class="col-1-6"></div>
+                        <div class="col-1-6"></div>
+                        <div class="col-1-6"></div>
+                        <div class="col-1-6"></div>
+                        <div class="col-1-6"></div>
+                        <div class="col-1-6"></div>
+                        <div class="col-1-6"></div>
+                        <div class="col-1-6"></div>
+                        <div class="col-1-6"></div>
+                        <div class="col-1-6"></div>
+                        <div class="col-1-6"></div>
+                        <div class="col-1-6"></div>
+                        <div class="col-1-6"></div>
+                        <div class="col-1-6"></div>
+                        <div class="col-1-6"></div>
+                        <div class="col-1-6"></div>
+                        <div class="col-1-6"></div>
+                        <div class="col-1-6"></div>
+                        <div class="col-1-6"></div>
+                        <div class="col-1-6"></div>
+                        <div class="col-1-6"></div>
+                        <div class="col-1-6"></div>
+                        <div class="col-1-6"></div>
+                        <div class="col-1-6"></div>
+                        <div class="col-1-6"></div>
+                        <div class="col-1-6"></div>
+                        <div class="col-1-6"></div>
+                        <div class="col-1-6"></div>
+                        <div class="col-1-6"></div>
+                        <div class="col-1-6"></div>
+                        <div class="col-1-6"></div>
+                        <div class="col-1-6"></div>
+                        <div class="col-1-6"></div>
+                        <div class="col-1-6"></div>
+                        <div class="col-1-6"></div>
+                        <div class="col-1-6"></div>
+                        <div class="col-1-6"></div> -->
+                    </div>
+
+
+                </div>
+
+
+            </div>
         </div>
+
     </main>
     <!-- /main -->
 
     <!-- footer -->
     <footer>
-        <div class="container">
+        <div>
             FOOTER
         </div>
     </footer>
