struttura mobile nav

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <main>
         <div class="row aside">
 
-            <nav class="side-nav">
+            <nav class="side-nav desktop-nav">
                 <div class="main-logo">
                     <a href="#">Spotify Logo</a>
                 </div>
@@ -42,6 +42,23 @@
                     </li>
                     <li>
                         <a href="#">La tua libreria</a>
+                    </li>
+
+                </ul>
+            </nav>
+            <nav class="side-nav mobile-nav">
+                <div class="main-logo">
+                    <a href="#">Logo</a>
+                </div>
+                <ul>
+                    <li>
+                        <a href="#">icona</a>
+                    </li>
+                    <li>
+                        <a href="#">icona</a>
+                    </li>
+                    <li>
+                        <a href="#">icona</a>
                     </li>
 
                 </ul>
