side nav- playlist- scrollbar

--- a/index.html
+++ b/index.html
@@ -31,37 +31,74 @@
 
             <nav class="side-nav desktop-nav">
                 <div class="main-logo">
-                    <a href="#">Spotify Logo</a>
+                    <a href="#">
+                        <div class="img-container">
+                            <img src="img/logo.svg" alt="Spotify Logo">
+                        </div>
+                    </a>
                 </div>
-                <ul>
+                <ul class="mar-bot-40">
                     <li>
+                        <img src="img/home.svg" alt="Home">
                         <a href="#">Home</a>
                     </li>
                     <li>
+                        <img src="img/search.svg" alt="Cerca">
                         <a href="#">Cerca</a>
                     </li>
                     <li>
+                        <img src="img/libreria.svg" alt="Libreria">
                         <a href="#">La tua libreria</a>
                     </li>
 
                 </ul>
+
+                <div class="nav-playlist-container row">
+                    <h2>PLAYLIST</h2>
+                    <ul class="nav-add-playlist">
+                        <li>
+                            <a href="#"><i class="fa-solid fa-square-plus fa-2x"></i>Crea playlist</a>
+                        </li>
+
+                    </ul>
+                    <div class="container row">
+                        <div class="nav-playlist-name"><a href="#">Nome Playlist</a></div>
+                        <div class="nav-playlist-name"><a href="#">Nome Playlist</a></div>
+                        <div class="nav-playlist-name"><a href="#">Nome Playlist</a></div>
+                        <div class="nav-playlist-name"><a href="#">Nome Playlist</a></div>
+                        <div class="nav-playlist-name"><a href="#">Nome Playlist</a></div>
+                        <div class="nav-playlist-name"><a href="#">Nome Playlist</a></div>
+                        <div class="nav-playlist-name"><a href="#">Nome Playlist</a></div>
+                        <div class="nav-playlist-name"><a href="#">Nome Playlist</a></div>
+                    </div>
+
+                </div>
+
             </nav>
+
             <nav class="side-nav mobile-nav">
                 <div class="main-logo">
-                    <a href="#">Logo</a>
+                    <a href="#">
+                        <div class="img-container">
+                            <img src="img/logo-small.svg" alt="Spotify Logo">
+                        </div>
+                    </a>
                 </div>
-                <ul>
-                    <li>
-                        <a href="#">icona</a>
-                    </li>
-                    <li>
-                        <a href="#">icona</a>
-                    </li>
-                    <li>
-                        <a href="#">icona</a>
-                    </li>
+                <div>
+                    <ul>
+                        <li>
+                            <a href="#"><img src="img/home.svg" alt="Home"></a>
+                        </li>
+                        <li>
+                            <a href="#"><img src="img/search.svg" alt="Cerca"></a>
+                        </li>
+                        <li>
+                            <a href="#"><img src="img/libreria.svg" alt="Libreria"></a>
+                        </li>
 
-                </ul>
+                    </ul>
+                </div>
+
             </nav>
 
             <div id="main-container">
