--- a/index.html
+++ b/index.html
@@ -113,54 +113,13 @@
                 <div class="main-section">
 
                     <div class="row">
-                        <!-- <div class="col-1-6"></div>
                         <div class="col-1-6"></div>
                         <div class="col-1-6"></div>
                         <div class="col-1-6"></div>
                         <div class="col-1-6"></div>
                         <div class="col-1-6"></div>
                         <div class="col-1-6"></div>
-                        <div class="col-1-6"></div>
-                        <div class="col-1-6"></div>
-                        <div class="col-1-6"></div>
-                        <div class="col-1-6"></div>
-                        <div class="col-1-6"></div>
-                        <div class="col-1-6"></div>
-                        <div class="col-1-6"></div>
-                        <div class="col-1-6"></div>
-                        <div class="col-1-6"></div>
-                        <div class="col-1-6"></div>
-                        <div class="col-1-6"></div>
-                        <div class="col-1-6"></div>
-                        <div class="col-1-6"></div>
-                        <div class="col-1-6"></div>
-                        <div class="col-1-6"></div>
-                        <div class="col-1-6"></div>
-                        <div class="col-1-6"></div>
-                        <div class="col-1-6"></div>
-                        <div class="col-1-6"></div>
-                        <div class="col-1-6"></div>
-                        <div class="col-1-6"></div>
-                        <div class="col-1-6"></div>
-                        <div class="col-1-6"></div>
-                        <div class="col-1-6"></div>
-                        <div class="col-1-6"></div>
-                        <div class="col-1-6"></div>
-                        <div class="col-1-6"></div>
-                        <div class="col-1-6"></div>
-                        <div class="col-1-6"></div>
-                        <div class="col-1-6"></div>
-                        <div class="col-1-6"></div>
-                        <div class="col-1-6"></div>
-                        <div class="col-1-6"></div>
-                        <div class="col-1-6"></div>
-                        <div class="col-1-6"></div>
-                        <div class="col-1-6"></div>
-                        <div class="col-1-6"></div>
-                        <div class="col-1-6"></div>
-                        <div class="col-1-6"></div>
-                        <div class="col-1-6"></div>
-                        <div class="col-1-6"></div> -->
+
                     </div>
 
 
@@ -175,8 +134,10 @@
 
     <!-- footer -->
     <footer>
-        <div>
-            FOOTER
+        <div class="row">
+            <div class="col-1-3">testo</div>
+            <div class="col-1-3">testo</div>
+            <div class="col-1-3">testo</div>
         </div>
     </footer>
     <!-- /footer -->
