--- a/index.html
+++ b/index.html
@@ -135,9 +135,28 @@
     <!-- footer -->
     <footer>
         <div class="row">
-            <div class="col-1-3">testo</div>
-            <div class="col-1-3">testo</div>
-            <div class="col-1-3">testo</div>
+            <div class="col-1-3 footer-left">
+                <img src="https://thisis-images.spotifycdn.com/37i9dQZF1DZ06evO3qPU3T-default.jpg"
+                    alt="Your favourite song">
+                <div>
+                    <h2>Vedi Cara</h2>
+                    <h3>Francesco Guccini</h3>
+                </div>
+                <div>
+                    <div class="button"><i class="fa-regular fa-heart fa-2x"></i></div class="button">
+                    <div class="button"><i class="fa-regular fa-folder fa-2x"></i></div class="button">
+
+                </div>
+            </div>
+
+            <div class="col-1-3 footer-middle">
+                mid
+            </div>
+
+            <div class="col-1-3 footer-right">
+                right
+            </div>
+
         </div>
     </footer>
     <!-- /footer -->
