--- a/index.html
+++ b/index.html
@@ -135,26 +135,33 @@
     <!-- footer -->
     <footer>
         <div class="row">
-            <div class="col-1-3 footer-left">
-                <img src="https://thisis-images.spotifycdn.com/37i9dQZF1DZ06evO3qPU3T-default.jpg"
-                    alt="Your favourite song">
+            <div class="footer footer-left">
+                <div class="img-container">
+
+                    <img src="https://thisis-images.spotifycdn.com/37i9dQZF1DZ06evO3qPU3T-default.jpg"
+                        alt="Your favourite song">
+                </div>
+
                 <div>
                     <h2>Vedi Cara</h2>
-                    <h3>Francesco Guccini</h3>
+                    <a href="#">
+                        <h3>Francesco Guccini</h3>
+                    </a>
+
                 </div>
                 <div>
-                    <div class="button"><i class="fa-regular fa-heart fa-2x"></i></div class="button">
-                    <div class="button"><i class="fa-regular fa-folder fa-2x"></i></div class="button">
+                    <div class="button"><i class="fa-regular fa-heart fa-lg"></i></div>
+                    <div class="button"><i class="fa-regular fa-folder fa-lg"></i></div>
 
                 </div>
             </div>
 
-            <div class="col-1-3 footer-middle">
-                mid
+            <div class="footer footer-middle">
+                MIDDLE
             </div>
 
-            <div class="col-1-3 footer-right">
-                right
+            <div class="footer footer-right">
+                RIGHT
             </div>
 
         </div>
