footer middle, play bar

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template HTML CSS</title>
+    <title>Spotify</title>
 
     <!-- GOOGLE FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -179,7 +179,9 @@
 
             <div id="middle-bottom">
                 <h6>0:25</h6>
-                <!-- qualcosa -->
+                <div id="play-bar">
+                    <div id="play-bar-gray"></div>
+                </div>
                 <h6>4:28</h6>
             </div>
         </div>
