--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
         <div class="footer footer-left">
             <img src="img/radar.jpeg" alt="La tua canzone preferita">
             <div>
-                <h6>Canzone preferita</h6>
-                <a href="#">Autore preferito</a>
+                <h6>Vedi Cara</h6>
+                <a href="#">Francesco Guccini</a>
             </div>
             <div class="btn-box">
 
@@ -179,15 +179,26 @@
 
             <div id="middle-bottom">
                 <h6>0:25</h6>
-                <div id="play-bar">
-                    <div id="play-bar-gray"></div>
+                <div class="play-bar">
+                    <div class="play-bar-gray"></div>
                 </div>
                 <h6>4:28</h6>
             </div>
         </div>
 
         <div class="footer footer-right">
-            RIGHT
+            <div class="button">
+                <i class="fa-solid fa-list"></i>
+            </div>
+            <div class="button">
+                <i class="fa-solid fa-desktop"></i>
+            </div>
+            <div class="button">
+                <i class="fa-solid fa-volume-high"></i>
+            </div>
+            <div class="play-bar">
+                <div class="play-bar-gray"></div>
+            </div>
         </div>
     </footer>
     <!-- /FOOTER -->
