struttura side-nav-desktop

--- a/index.html
+++ b/index.html
@@ -24,8 +24,76 @@
 <body class="debug">
 
     <section id="upper">
+
         <aside>
-            ASIDE
+
+            <nav class="side-nav desktop-nav">
+                <div class="main-logo">
+                    <a href="#">
+
+                        <img src="img/logo.svg" alt="Spotify Logo">
+
+                    </a>
+                </div>
+                <ul>
+                    <li>
+                        <a href="#"><img src="img/home.svg" alt="Home">Home</a>
+                    </li>
+                    <li>
+
+                        <a href="#"><img src="img/search.svg" alt="Cerca">Cerca</a>
+                    </li>
+                    <li>
+
+                        <a href="#"><img src="img/libreria.svg" alt="Libreria">La tua libreria</a>
+                    </li>
+
+                </ul>
+
+                <h4>playlist</h4>
+
+                <a href="#"><i class="fa-solid fa-square-plus fa-2x"></i>Crea playlist</a>
+
+                <div class="nav-playlist">
+                    <ul>
+                        <li>
+                            <a href="#">Nome Playlist</a>
+                        </li>
+                        <li>
+                            <a href="#">Nome Playlist</a>
+                        </li>
+                        <li>
+                            <a href="#">Nome Playlist</a>
+                        </li>
+                        <li>
+                            <a href="#">Nome Playlist</a>
+                        </li>
+                        <li>
+                            <a href="#">Nome Playlist</a>
+                        </li>
+                        <li>
+                            <a href="#">Nome Playlist</a>
+                        </li>
+                        <li>
+                            <a href="#">Nome Playlist</a>
+                        </li>
+                        <li>
+                            <a href="#">Nome Playlist</a>
+                        </li>
+                        <li>
+                            <a href="#">Nome Playlist</a>
+                        </li>
+                        <li>
+                            <a href="#">Nome Playlist</a>
+                        </li>
+                        <li>
+                            <a href="#">Nome Playlist</a>
+                        </li>
+                    </ul>
+                </div>
+
+
+            </nav>
         </aside>
 
         <main>
