--- a/index.html
+++ b/index.html
@@ -26,74 +26,92 @@
     <section id="upper">
 
         <aside>
+            <div id="aside-top">
+                <div class="logo-container">
+                    <div class="logo-desktop">
+                        <img src="img/logo.svg" alt="">
+                    </div>
+                    <div class="logo-mobile">
+                        <img src="img/logo-small.svg" alt="">
+                    </div>
+                </div>
 
-            <nav class="side-nav desktop-nav">
-                <div class="main-logo">
-                    <a href="#">
+                <nav>
+                    <ul>
+                        <li>
+                            <a href="#">
+                                <img src="img/home.svg" alt="home">
+                                <span>Home</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="img/search.svg" alt="cerca">
+                                <span>Cerca</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="img/libreria.svg" alt="libreria">
+                                <span>La tua libreria</span>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
 
-                        <img src="img/logo.svg" alt="Spotify Logo">
-
-                    </a>
+            <div id="aside-middle">
+                <h4>
+                    playlist
+                </h4>
+                <div>
+                    <button>
+                        <i class="fa-solid fa-square-plus fa-2x"></i>
+                        <span>Crea playlist</span>
+                    </button>
                 </div>
                 <ul>
                     <li>
-                        <a href="#"><img src="img/home.svg" alt="Home">Home</a>
+                        <a href="#">Nome Playlist</a>
                     </li>
                     <li>
-
-                        <a href="#"><img src="img/search.svg" alt="Cerca">Cerca</a>
+                        <a href="#">Nome Playlist</a>
                     </li>
                     <li>
-
-                        <a href="#"><img src="img/libreria.svg" alt="Libreria">La tua libreria</a>
+                        <a href="#">Nome Playlist</a>
                     </li>
-
+                    <li>
+                        <a href="#">Nome Playlist</a>
+                    </li>
+                    <li>
+                        <a href="#">Nome Playlist</a>
+                    </li>
+                    <li>
+                        <a href="#">Nome Playlist</a>
+                    </li>
+                    <li>
+                        <a href="#">Nome Playlist</a>
+                    </li>
                 </ul>
+            </div>
 
-                <h4>playlist</h4>
-
-                <a href="#"><i class="fa-solid fa-square-plus fa-2x"></i>Crea playlist</a>
-
-                <div class="nav-playlist">
-                    <ul>
-                        <li>
-                            <a href="#">Nome Playlist</a>
-                        </li>
-                        <li>
-                            <a href="#">Nome Playlist</a>
-                        </li>
-                        <li>
-                            <a href="#">Nome Playlist</a>
-                        </li>
-                        <li>
-                            <a href="#">Nome Playlist</a>
-                        </li>
-                        <li>
-                            <a href="#">Nome Playlist</a>
-                        </li>
-                        <li>
-                            <a href="#">Nome Playlist</a>
-                        </li>
-                        <li>
-                            <a href="#">Nome Playlist</a>
-                        </li>
-                        <li>
-                            <a href="#">Nome Playlist</a>
-                        </li>
-                        <li>
-                            <a href="#">Nome Playlist</a>
-                        </li>
-                        <li>
-                            <a href="#">Nome Playlist</a>
-                        </li>
-                        <li>
-                            <a href="#">Nome Playlist</a>
-                        </li>
-                    </ul>
+            <div id="aside-bottom">
+                <div>
+                    <a href="#">
+                        <i class="fa-regular fa-circle-down"></i>
+                        <span>Installa app</span>
+                    </a>
                 </div>
+                <div>
+                    <a href="#">
+                        <img src="img/profile.svg" alt="Profilo">
+                        <span>Gandalf T. White</span>
+                    </a>
+                </div>
+            </div>
 
 
-            </nav>
+
         </aside>
 
         <main>
