prova overlay--non funziona

--- a/index.html
+++ b/index.html
@@ -150,7 +150,15 @@
                 </h2>
                 <div class="row">
                     <div class="col">
+
+                        <!-- OVERLAY -->
+
+                        <div id="overlay">
+                            <i class="fa-regular fa-circle-play fa-6x"></i>
+                        </div>
+
                         <img src="img/metal_lifting.jpg" alt="Heavy Metal">
+
                         <h3>Heavy Metal</h3>
                         <p>Hell yeah!</p>
                     </div>
