--- a/index.html
+++ b/index.html
@@ -92,6 +92,19 @@
                     <li>
                         <a href="#">Nome Playlist</a>
                     </li>
+                    <li>
+                        <a href="#">Nome Playlist</a>
+                    </li>
+                    <li>
+                        <a href="#">Nome Playlist</a>
+                    </li>
+                    <li>
+                        <a href="#">Nome Playlist</a>
+                    </li>
+                    <li>
+                        <a href="#">Nome Playlist</a>
+                    </li>
+
                 </ul>
             </div>
 
@@ -152,38 +165,75 @@
                     <div class="col">
 
                         <!-- OVERLAY -->
+                        <div class="img-container">
+                            <div id="overlay">
+                                <i class="fa-regular fa-circle-play fa-6x"></i>
+                            </div>
 
-                        <div id="overlay">
-                            <i class="fa-regular fa-circle-play fa-6x"></i>
+                            <img src="img/metal_lifting.jpg" alt="Heavy Metal">
                         </div>
-
-                        <img src="img/metal_lifting.jpg" alt="Heavy Metal">
-
                         <h3>Heavy Metal</h3>
                         <p>Hell yeah!</p>
                     </div>
+
                     <div class="col">
-                        <img src="img/stranger.jpeg" alt="Stranger things">
+                        <div class="img-container">
+                            <div id="overlay">
+                                <i class="fa-regular fa-circle-play fa-6x"></i>
+                            </div>
+                            <img src="img/stranger.jpeg" alt="Stranger things">
+                        </div>
+
+
                         <h3>Stranger Things soundtrack v.1</h3>
                         <p>Kyle Dixon & Michael Stein</p>
                     </div>
+
                     <div class="col">
-                        <img src="img/aquietplace.jpeg" alt="A quiet place">
+
+                        <div class="img-container">
+                            <div id="overlay">
+                                <i class="fa-regular fa-circle-play fa-6x"></i>
+                            </div>
+                            <img src="img/aquietplace.jpeg" alt="A quiet place">
+                        </div>
+
                         <h3>A quiet place soundtrack</h3>
                         <p>Sottotitolo</p>
                     </div>
+
                     <div class="col">
-                        <img src="img/split.jpeg" alt="Split">
+                        <div class="img-container">
+                            <div id="overlay">
+                                <i class="fa-regular fa-circle-play fa-6x"></i>
+                            </div>
+                            <img src="img/split.jpeg" alt="Split">
+                        </div>
+
                         <h3>Split soundtrack</h3>
                         <p>Sottotitolo</p>
                     </div>
+
                     <div class="col">
-                        <img src="img/cure.jpeg" alt="Heavy Metal">
+                        <div class="img-container">
+                            <div id="overlay">
+                                <i class="fa-regular fa-circle-play fa-6x"></i>
+                            </div>
+                            <img src="img/cure.jpeg" alt="Heavy Metal">
+                        </div>
+
                         <h3>A cure for wellness</h3>
                         <p>Sottotitolo</p>
                     </div>
+
                     <div class="col">
-                        <img src="img/sinister.jpeg" alt="Heavy Metal">
+                        <div class="img-container">
+                            <div id="overlay">
+                                <i class="fa-regular fa-circle-play fa-6x"></i>
+                            </div>
+                            <img src="img/sinister.jpeg" alt="Heavy Metal">
+                        </div>
+
                         <h3>Very Heavy Metal</h3>
                         <p>Would you dare?</p>
                     </div>
@@ -197,11 +247,23 @@
                 <p>Più ascolti, più accurati saranno i suggerimenti</p>
                 <div class="row">
                     <div class="col">
-                        <img src="img/radar.jpeg" alt="Release Radar">
+                        <div class="img-container">
+                            <div id="overlay">
+                                <i class="fa-regular fa-circle-play fa-6x"></i>
+                            </div>
+                            <img src="img/radar.jpeg" alt="Release Radar">
+                        </div>
+
                         <h3>Release Radar</h3>
                     </div>
                     <div class="col">
-                        <img src="img/mixdaily.jpeg" alt="Daily Mix 1">
+                        <div class="img-container">
+                            <div id="overlay">
+                                <i class="fa-regular fa-circle-play fa-6x"></i>
+                            </div>
+                            <img src="img/mixdaily.jpeg" alt="Daily Mix 1">
+                        </div>
+
                         <h3>Daily Mix 1</h3>
                     </div>
 
@@ -215,11 +277,24 @@
                 <p>Più ascolti, più accurati saranno i suggerimenti</p>
                 <div class="row">
                     <div class="col">
-                        <img src="img/youg.jpeg" alt="popular">
+                        <div class="img-container">
+                            <div id="overlay" class="round-image">
+                                <i class="fa-regular fa-circle-play fa-6x"></i>
+                            </div>
+                            <img src="img/youg.jpeg" alt="popular">
+                        </div>
+
                         <h3>Lana Del Rey</h3>
                     </div>
                     <div class="col">
-                        <img src="img/einaudi.jpeg" alt="popular">
+
+                        <div class="img-container">
+                            <div id="overlay" class="round-image">
+                                <i class="fa-regular fa-circle-play fa-6x"></i>
+                            </div>
+                            <img src="img/einaudi.jpeg" alt="popular">
+                        </div>
+
                         <h3>Ludovico Einaudi</h3>
                     </div>
 
